--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "description": "",
   "main": "gulpfile.babel.js",
-  "dependencies": {
+  "devDependencies": {
     "babel-core": "^5.8.25",
     "browser-sync": "^2.9.9",
     "gulp": "^3.9.0",
-    "gulp-count": "^0.1.0",
     "gulp-autoprefixer": "^3.0.2",
+    "gulp-count": "^0.1.0",
+    "gulp-gh-pages": "0.5.2",
     "gulp-jade": "^1.1.0",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
